--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('./scss/reset.scss');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+
+html::-webkit-scrollbar-thumb {
+  position: fixed;
+}
+
+::-webkit-scrollbar-track-piece {
+  background-color: transparent;
+  border-radius: 0 !important;
+  border: none !important;
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #646464;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #494949;
+}
+
+::selection {
+  background-color: rgba(162, 192, 255, 0.3);
+}
+
+* {
+  color: #333;
+  font-size: .9rem;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+
+html, body {
+  min-height: 100%;
+}
