--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<nav class="navbar">
+  <div class="navbar-wrapper">
+    <button class="cart-btn">
+      <i class="material-icons">shopping_cart</i>
+    </button>
+  </div>
+</nav>
