--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,14 @@ html, body {
   min-height: 100%;
 }
 
+body {
+  background-color: #F1F3FA;
+}
+
+img {
+  width: 100%;
+}
+
 .wrapper {
   max-width: 1200px;
   margin: auto;
