--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -2,6 +2,8 @@
   margin: 4rem 0;
 
   .products {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     width: 100%;
 
     li {
