--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,23 +3,22 @@
 
   .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 2rem;
     width: 100%;
 
     li {
       display: flex;
       flex-direction: column;
       width: 100%;
-      padding: 1.5rem;
       background-color: #fff;
-
-      &:not(:last-of-type) {
-        margin-bottom: 2rem;
-      }
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
 
       .product-image {
-        width: 100px;
-        height: 100px;
+        width: 100%;
+        height: 300px;
+        padding: 1.5rem;
         background-color: #fff;
 
         img {
@@ -30,7 +29,13 @@
       }
 
       .product-info {
+        padding: 1.5rem;
+        background-color: #fff;
 
+        h3 {
+          margin-bottom: 1rem;
+          line-height: 1.2rem;
+        }
       }
     }
   }
