--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,8 @@ html, body {
 }
 
 body {
-  background-color: #F1F3FA;
+  // background-color: #F1F3FA;
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
 }
 
 img {
