--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -4,12 +4,13 @@
   .products {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
+    gap: 1.5rem;
     width: 100%;
 
     li {
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
       width: 100%;
       background-color: #fff;
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
@@ -29,13 +30,37 @@
       }
 
       .product-info {
+        width: 100%;
         padding: 1.5rem;
         background-color: #fff;
+        overflow: hidden;
 
         h3 {
           margin-bottom: 1rem;
-          line-height: 1.2rem;
+          font-size: 1rem;
+          font-weight: 400;
+          line-height: 1.5rem;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
+
+        .price {
+          margin-bottom: 1rem;
+          color: #555;
+          font-size: 1rem;
+          font-weight: 600;
+        }
+
+        .stock-label {
+          color: #66a6ff;
+        }
+      }
+
+      .action-buttons {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
       }
     }
   }
