--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,9 +7,9 @@
         </div>
   
         <div class="product-info">
-          <h3 [title]="product.productName">
+          <a href="#" class="product-name" [title]="product.productName">
             {{ textClipper(product.productName, 68) }}
-          </h3>
+          </a>
   
           <!-- <p>{{ product.productDesc }}</p> -->
           <p class="price">{{ product.price | currency }}</p>
@@ -19,7 +19,7 @@
           
           <div class="action-buttons">
             <button type="button" class="buy-now-btn">Buy Now</button>
-            <button type="button" class="add-to-cart-btn">
+            <button type="button" class="add-to-cart-btn" title="Add to Cart">
               <i class="material-icons">add_shopping_cart</i>
             </button>
           </div>
