--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -35,7 +35,7 @@
         background-color: #fff;
         overflow: hidden;
 
-        h3 {
+        .product-name {
           margin-bottom: 1rem;
           font-size: 1rem;
           font-weight: 400;
@@ -61,6 +61,40 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        margin-top: 2rem;
+
+        .buy-now-btn {
+          position: relative;
+
+          &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            transform: scaleX(0);
+            width: 100%;
+            height: 1px;
+            background-color: #444;
+            transition: transform .2s ease;
+          }
+      
+          &:hover::before {
+            transform: scaleX(1);
+          }
+        }
+
+        .add-to-cart-btn {
+          .material-icons {
+            color: #666;
+            transition: color .2s ease;
+          }
+
+          &:hover {
+            .material-icons {
+              color: #333;
+            }
+          }
+        }
       }
     }
   }
