--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -36,6 +36,7 @@
         overflow: hidden;
 
         .product-name {
+          display: block;
           margin-bottom: 1rem;
           font-size: 1rem;
           font-weight: 400;
