--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -11,7 +11,7 @@
     max-width: 1200px;
     height: inherit;
     margin: auto;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
   }
   
   .cart-btn {
@@ -19,7 +19,32 @@
     margin-left: auto;
     
     .material-icons {
-      color: #E29FA1;
+      color: #666;
+      transition: color .2s ease;
+    }
+
+    &:hover {
+      .material-icons {
+        color: #333;
+      }
+    }
+
+    .badge {
+      position: absolute;
+      right: -10px;
+      top: -10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 20px;
+      height: 20px;
+      border-radius: 30px;
+      color: #fff;
+      font-size: .7rem;
+      font-weight: 600;
+      white-space: nowrap;
+      background-color: #66a6ff;
+      overflow: hidden;
     }
   }
 }
