--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-wrapper">
     <button class="cart-btn">
       <i class="material-icons">shopping_cart</i>
-      <span class="badge">1</span>
+      <span class="badge">99+</span>
     </button>
   </div>
 </nav>
