--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -31,19 +31,21 @@
 
     .badge {
       position: absolute;
-      right: -10px;
+      right: -15px;
       top: -10px;
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 20px;
+      min-width: 20px;
+      padding: 0.3rem;
       height: 20px;
       border-radius: 30px;
       color: #fff;
-      font-size: .7rem;
+      font-size: .8rem;
       font-weight: 600;
       white-space: nowrap;
       background-color: #66a6ff;
+      box-shadow: 0 1px 20px rgba(0, 0, 0, 0.2);
       overflow: hidden;
     }
   }
