--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -44,8 +44,8 @@
       font-size: .8rem;
       font-weight: 600;
       white-space: nowrap;
-      background-color: #66a6ff;
-      box-shadow: 0 1px 20px rgba(0, 0, 0, 0.2);
+      background-color: #ff667a;
+      box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
       overflow: hidden;
     }
   }
