--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <div class="navbar-wrapper">
     <button class="cart-btn">
       <i class="material-icons">shopping_cart</i>
-      <span *ngIf="itemCountSource" class="badge">
-        {{ itemCountSource }}
+      <span *ngIf="itemCount" class="badge">
+        {{ itemCount }}
       </span>
     </button>
   </div>
