--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,21 @@
-<section class="cart-container">
-  
-</section>
+<div class="overlay">
+  <section class="cart-container">
+    <div class="top">
+      <p>Your items</p>
+
+      <button 
+        (click)="onClose()" 
+        type="button" class="close-btn" title="Close">
+        <i class="material-icons">close</i>
+      </button>
+    </div>
+
+    <ul class="item-list">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </section>
+</div>
