--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -37,11 +37,46 @@
       }
     }
 
-    .item-list {
-      display: flex;
-      flex-direction: column;
+    .content {
+      position: relative;
       width: 100%;
-      background-color: #bbb;
+      height: auto;
+
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 1rem;
+        background: linear-gradient(#fff, transparent);
+        z-index: 1;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 1rem;
+        background: linear-gradient(transparent, #fff);
+        z-index: 1;
+      }
+    }
+
+    .item-list {
+      position: relative;
+      width: 100%;
+      max-height: calc(120px * 7 - 81.78px);
+      padding: 1rem 0;
+      overflow: hidden;
+      overflow-y: auto;
+      scrollbar-width: 0;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
 
       li {
         display: flex;
@@ -52,6 +87,38 @@
         &:not(:last-of-type) {
           margin-bottom: 1.5rem;
         }
+      }
+    }
+
+    .action-btns {
+      position: absolute;      
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: auto;
+      padding: 1.5rem;
+      background-color: #fff;
+
+      button {
+        position: relative;
+        margin-left: auto;
+        padding: 0.4rem 0;
+
+          &::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            transform: scaleX(0);
+            width: 100%;
+            height: 1px;
+            background-color: #444;
+            transition: transform .2s ease;
+          }
+      
+          &:hover::before {
+            transform: scaleX(1);
+          }
       }
     }
   }
