--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,13 +56,40 @@ img {
 }
 
 .overlay {
-  // visibility: hidden;
-  // opacity: 0;
+  visibility: hidden;
+  opacity: 0;
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+  animation: reveal 0.4s ease forwards;
   z-index: 1000;
+
+  .hide {
+    animation: hide 0.4s ease forwards;
+  }
+}
+
+@keyframes reveal {
+  from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes hide {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
 }
