--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
-<div class="overlay">
-  <section class="cart-container">
+
+  <section *ngIf="viewCart" class="cart-container">
     <div class="top">
       <p>Your items</p>
 
@@ -32,4 +32,3 @@
       <button>Proceed to Checkout</button>
     </div>
   </section>
-</div>
