--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,12 +1,3 @@
-@keyframes slideIn {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
 .cart-container {
   position: absolute;
   right: 0;
@@ -16,7 +7,7 @@
   padding: 1.5rem;
   background-color: #fff;
   box-shadow: -2px 0 20px rgba(0, 0, 0, 0.1);
-  animation: slideIn 0.3s ease;
+  // animation: slideIn 0.3s ease;
 
   .top {
     display: flex;
