--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-wrapper">
-    <button class="cart-btn">
+    <button (click)="openCart()" class="cart-btn">
       <i class="material-icons">shopping_cart</i>
       <span *ngIf="itemCount" class="badge">
         {{ itemCount }}
