--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,8 +64,11 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  animation: reveal 0.4s ease forwards;
   z-index: 1000;
+
+  .show {
+    animation: reveal 0.4s ease forwards;
+  }
 
   .hide {
     animation: hide 0.4s ease forwards;
