--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -18,13 +18,45 @@
           </div>
 
           <div class="product-info">
-            <a href="#" class="product-name" [title]="product.productName">
+            <a href="#" class="product-name">
               {{ textClipper(product.productName, 68) }}
             </a>
     
             <p class="price">{{ product.price | currency }}</p>
+
+            <button class="remove-btn" title="Remove from Cart">Remove</button>
           </div>
         </li>
+        <!-- <li>
+          <div class="product-image">
+            <img src="assets/img/product-images/product1.jpg" alt="">
+          </div>
+
+          <div class="product-info">
+            <a href="#" class="product-name" >
+              Mehron Makeup Stage Blood (16 Ounce) (Dark Venous)
+            </a>
+    
+            <p class="price">{{ 19.51 | currency }}</p>
+
+            
+          </div>
+        </li>
+        <li>
+          <div class="product-image">
+            <img src="assets/img/product-images/product2.jpg" alt="">
+          </div>
+
+          <div class="product-info">
+            <a href="#" class="product-name" >
+              Mehron Makeup Stage Blood (16 Ounce) (Dark Venous)
+            </a>
+    
+            <p class="price">{{ 19.51 | currency }}</p>
+
+            <button class="remove-btn">Remove</button>
+          </div>
+        </li> -->
       </ul>
     </div>
 
