--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -55,5 +55,7 @@
 </div>
 
 <ng-template #emptyCart>
-  <h3>Your cart is empty</h3>
+  <div class="empty-cart-msg">
+    <h3>Your cart is empty</h3>
+  </div>
 </ng-template>
