--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -32,6 +32,15 @@
     animation: slideOut 0.3s ease forwards;
   }
 
+  .empty-cart-msg {
+    margin: 15rem auto;
+    
+    h3 {
+      font-size: 1.1rem;
+      font-weight: 300;
+    }
+  }
+
   .top {
     display: flex;
     justify-content: space-between;
@@ -67,7 +76,6 @@
     width: 100%;
     height: auto;
     padding: 0 1.5rem;
-    // background-color: #555;
 
     &::before {
       content: '';
@@ -200,8 +208,8 @@
     width: 100%;
     height: 66px;
     padding: 0 1.5rem;
-    // background-color: #fff;
-    background-color: #eee;
+    border-top: thin solid #eee;
+    background-color: #fff;
 
     .subtotal {
 
