--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -10,7 +10,7 @@
       </button>
     </div>
 
-    <div *ngIf="cartItems.length; else emptyCart" class="content">
+    <div *ngIf="cartItems?.length; else emptyCart" class="content">
       <ul class="item-list">
         <li *ngFor="let product of cartItems">
           <div *ngIf="product.productImage" class="product-image">
@@ -44,7 +44,7 @@
     </div>
 
     <div class="bottom">
-      <div class="subtotal">
+      <div *ngIf="cartItems?.length" class="subtotal">
         <span class="subtotal-items">Items: <strong>{{ itemCount | number }}</strong></span>
         <span class="subtotal-amount">Subtotal: <strong>{{ subtotal | currency }}</strong></span>
       </div>
