--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -34,10 +34,12 @@
 
   .empty-cart-msg {
     margin: 15rem auto;
+    user-select: none;
     
     h3 {
+      color: #1a1a1a;
       font-size: 1.1rem;
-      font-weight: 300;
+      font-weight: 400;
     }
   }
 
@@ -221,23 +223,22 @@
     button {
       position: relative;
       margin-left: auto;
-      padding: 0.4rem 0;
 
-        &::before {
-          content: '';
-          position: absolute;
-          left: 0;
-          bottom: -2px;
-          transform: scaleX(0);
-          width: 100%;
-          height: 1px;
-          background-color: #444;
-          transition: transform .2s ease;
-        }
-    
-        &:hover::before {
-          transform: scaleX(1);
-        }
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -2px;
+        transform: scaleX(0);
+        width: 100%;
+        height: 1px;
+        background-color: #444;
+        transition: transform .2s ease;
+      }
+  
+      &:hover::before {
+        transform: scaleX(1);
+      }
     }
   }
 }
