--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -133,7 +133,7 @@
 
         img {
           height: 100%;
-          object-fit: fit;
+          object-fit: contain;
           object-position: center center;
         }
       }
