--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,7 @@
 .navbar {
+  position: fixed;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 70px;
   overflow: hidden;
@@ -46,6 +49,7 @@
       white-space: nowrap;
       background-color: #ff667a;
       box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+      animation: reveal 0.4s ease;
       overflow: hidden;
     }
   }
