--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,12 +15,12 @@ html::-webkit-scrollbar-thumb {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #646464;
+  background-color: #c5c5c5;
   border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #494949;
+  background-color: #b8b8b8;
 }
 
 ::selection {
