--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -22,7 +22,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  width: 700px;
+  width: 600px;
   height: 100%;
   background-color: #fff;
   box-shadow: -2px 0 20px rgba(0, 0, 0, 0.1);
@@ -37,9 +37,9 @@
     user-select: none;
     
     h3 {
-      color: #1a1a1a;
-      font-size: 1.1rem;
-      font-weight: 400;
+      color: #5c5c5c;
+      font-size: 1rem;
+      font-weight: 500;
     }
   }
 
