--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -7,6 +7,7 @@
   overflow: hidden;
   background-color: #fff;
   box-shadow: 0 1px 20px rgba(0, 0, 0, 0.1);
+  z-index: 100;
 
   &-wrapper {
     display: flex;
