--- a/src/app/shared/spinner/spinner.component.html
+++ b/src/app/shared/spinner/spinner.component.html
@@ -1,4 +1,6 @@
-<div class="spinner-overlay">
+<div  
+  [@showSpinner]="loading ? 'show' : 'hide'"
+  class="spinner-overlay">
   <div class="spinner">
     <div class="inner-ring"></div>
     <div class="outer-ring"></div>
