--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div 
-      *ngIf="cartItems?.length && isLoading; else emptyCart" 
+      *ngIf="cartItems?.length && !isLoading; else emptyCart" 
       class="content">
       <ul class="item-list">
         <li *ngFor="let product of cartItems">
@@ -45,7 +45,7 @@
       </ul>
     </div>
 
-    <div *ngIf="cartItems?.length" class="bottom">
+    <div *ngIf="cartItems?.length && !isLoading" class="bottom">
       <div class="subtotal">
         <span class="subtotal-items">Items: <strong>{{ itemCount | number }}</strong></span>
         <span class="subtotal-amount">Subtotal: <strong>{{ subtotal | currency }}</strong></span>
