--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -107,6 +107,7 @@
   .item-list {
     position: relative;
     width: 100%;
+    height: inherit;
     padding: 1rem 0;
     overflow: hidden;
     overflow-y: auto;
@@ -205,9 +206,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: absolute;      
-    left: 0;
-    bottom: 0;
     width: 100%;
     height: 66px;
     padding: 0 1.5rem;
