--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -36,6 +36,7 @@
               <label for="quantity">
                 Quantity: 
                 <input 
+                  (change)="quantityChanges(product, +$event.target.value)"
                   [value]="product.quantity"
                   name="quantity"
                   id="quantity"
