--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <div class="navbar-wrapper">
+  <div class="wrapper navbar-wrapper">
     <button (click)="openCart()" class="cart-btn">
       <i class="material-icons">shopping_cart</i>
       <span *ngIf="itemCount" class="badge">
