--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -177,26 +177,33 @@
             border-radius: 6px;
             background-color: #fff0eb;
           }
+          
+          .remove-btn {
+            position: relative;
+  
+            &::before {
+              content: '';
+              position: absolute;
+              left: 0;
+              bottom: -2px;
+              transform: scaleX(0);
+              width: 100%;
+              height: 1px;
+              background-color: #444;
+              transition: transform .2s ease;
+            }
+        
+            &:hover::before {
+              transform: scaleX(1);
+            }
+          }
         }
 
-        .remove-btn {
-          position: relative;
-
-          &::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            transform: scaleX(0);
-            width: 100%;
-            height: 1px;
-            background-color: #444;
-            transition: transform .2s ease;
-          }
-      
-          &:hover::before {
-            transform: scaleX(1);
-          }
+        .subtotal {
+          margin-top: 2rem;
+          padding-top: 1rem;
+          font-size: .85rem;
+          border-top: thin solid #e7edff;
         }
       }
     }
