--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -19,7 +19,7 @@
     <div 
       *ngIf="cartItems?.length && !isLoading;" 
       class="content">
-      <ul class="item-list">
+      <ul #itemList class="item-list">
         <li *ngFor="let item of cartItems">
           <div *ngIf="item.productImage" class="product-image">
             <img image-loader [src]="item.productImage" [alt]="item.productName">
