--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,1 +1,5 @@
-<p>product-details works!</p>
+<div *ngIf="!isLoading">
+  <h1>{{ product | json }}</h1>
+</div>
+
+<app-spinner [loading]="isLoading"></app-spinner>
