--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -1,5 +1,30 @@
 .product-detail-section {
-  margin: 4rem 0;
+  width: 100%;
+  min-height: 100vh;
   padding: 70px 1rem 0;
-  
+  background-color: #fff;
+
+  .grid-container {
+    display: grid;
+    grid-template-areas: 'big big .' 'big big .';
+    gap: 1.1rem;
+    width: 100%;
+    height: 500px;
+    margin-top: 4rem;
+
+    .grid-item:first-of-type {
+      grid-area: big;
+    }
+
+    .grid-item {
+      background-color: #bbb;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+      }
+    }
+  }
 }
